# huggingface_detr_custom

./: .gitignore  README.md  pyproject.toml
src/: datasets.py  inference.py  models.py  test.ipynb  train.py
src/utils/: collate_fn.py  compute_metrics.py
